@@ -1,30 +1,30 @@
-2d9228d9728875f07bf3fbf6e2a80a09 *DESCRIPTION
+3a66a5a834e110970b7c8a32b83243b9 *DESCRIPTION
 70421679862083dcc8f49a7760416872 *LICENSE
 a1ecec8f7c35cc1b8d18c73629bce228 *NAMESPACE
-ec98f302598de3d03fe034768db4a4e0 *R/Rvcg-package.R
+1f21de1010f6844760a168dcb281c3b3 *R/Rvcg-package.R
 2afb2cdada828c2f13c0dd878b77b341 *R/meshInfo.r
 6591229d45326b03388b0ce986966fba *R/meshintegrity.r
 7bafaeb6c3bf9c2ecc129d9af6dab234 *R/normorient.r
 2257a4c56d66071b5a19ebc153c4fb8b *R/onUnload.r
-ec16a714b4f6f6ec66e4132b3bb57158 *R/vcgArea.r
+ecb8493ab412c47272198cba5ec52c9c *R/vcgArea.r
 8fbdc23b655e75b30d389a111f48f293 *R/vcgBallPivoting.r
 de11dd0101fb1c9b25974e84bfb25e69 *R/vcgBary.r
 cf68989b4dbb398bf93d7378bd5cf5b2 *R/vcgBorder.r
 914f7593d3f2011b1ccc661788679fa3 *R/vcgClean.r
 fb0c21f28e986eeb778cd474c14fe579 *R/vcgClost.r
 29016f7b4b121cf23f21e344a2c61050 *R/vcgClostKD.r
-bd0f2e99b71abdc08ef095353fb7b86f *R/vcgCreateKD.r
+be076a3b3b0409d5a28b634b8fae9014 *R/vcgCreateKD.r
 a5b28ce147f12f758260e06639faad5c *R/vcgCurve.r
 6f8ba72a1b5ef717c366fdaa3d44b750 *R/vcgGetEdge.r
 d5bdc921edbc08acf3a409d6c2903b62 *R/vcgImport.r
-5e72da76de8a97de972466b098e65e94 *R/vcgIsolated.r
+0d7ce1b9a22a018fb76fcdc5504a51c4 *R/vcgIsolated.r
 e245bdd49f4a2e14ee4e11b46dd38405 *R/vcgIsosurface.r
 27dffee7830a3dc8a9d750b8cf283b38 *R/vcgKDtree.r
 589871970e6a63e5e0039d857306fea0 *R/vcgKmeans.r
 07c0841bc88b15465b1cd2cf1794988a *R/vcgMeshres.r
 caa62d825ad39c74d5587c1a676645aa *R/vcgMetro.r
 2c0d6630474e3ad3cdea0921b0a62e76 *R/vcgOneRingArea.r
-c8438668e971897408e949d23b32f920 *R/vcgPlatonic.r
+5d6cd6905e2718c3dfbfd7616f6bc33f *R/vcgPlatonic.r
 d66bea127d996ae7bd19e9afbbae15ed *R/vcgPlyRead.r
 5c25662b092d4ce3bd1215e30995e82c *R/vcgPlyWrite.r
 52dc4566df64b18e6a7f5632bc37b84c *R/vcgQEdecim.r
@@ -40,9 +40,9 @@ faf0a86433e3ef7bd49677856e2e0534 *cleanup
 5289d94947630da4e6294cea4106edfa *data/humface.rda
 db17f2c29701d7264f7365e9cd1b702d *inst/CITATION
 82859a94dba98071d74f06fbebc62cd4 *inst/COPYRIGHTS
-7ae9d396f97dce6a674b6dc717708790 *inst/NEWS.Rd
+ae57b1b944db72d0e4141fede209c5a9 *inst/NEWS.Rd
 df6fedee25f982212d0432241728d1b0 *man/Rvcg-deprecated.Rd
-c8a3cdeed9f98f2e6ed024196cc7656c *man/Rvcg-package.Rd
+b2a4aac9a27240273ac9970630c684b8 *man/Rvcg-package.Rd
 070ada99b41d2aaa66ca7dd8976bc2f9 *man/checkFaceOrientation.Rd
 959c26f329d0fa7a253bb21b1a36ca52 *man/dummyhead.Rd
 173af7f46dc03b8032a3b9a9751d78c7 *man/humface.Rd
@@ -51,40 +51,40 @@ aa9b45edd6521946da4456b48adad589 *man/meshInfo.Rd
 b6cdac210b59c5a638aef435b70b9d24 *man/nfaces.Rd
 28cc7bc5ff8c7bf903702bb066d4cabc *man/nverts.Rd
 c1f9d9471f7f7be962c9a937d4fb4002 *man/setRays.Rd
-b3e3e0cd7acf368997eeba7993298b7e *man/vcgArea.Rd
+807ff809052adde966a7b67b2d83248a *man/vcgArea.Rd
 a0275e3520237f729d03d644ddd50101 *man/vcgBallPivoting.Rd
 4a73d497df2c0e16d61ee8d1e7a9a154 *man/vcgBary.Rd
 ff249b1bf063cd963cf881aeb23f1dcd *man/vcgBorder.Rd
 7ba33fdd35fb752297b599e9a31f7975 *man/vcgClean.Rd
-59a1da2f5ed79e6a780b29322f6f9a0c *man/vcgClost.Rd
-42dedf2e803bc81a75e0a55da322dcbe *man/vcgClostKD.Rd
+0356f9001d757642a8cd5c0bdb38d2d2 *man/vcgClost.Rd
+13c77bbfb61b25c6a34b21182d21f032 *man/vcgClostKD.Rd
 0f7afa7eb12d5e4fb138a0574c9eb89e *man/vcgClostOnKDtreeFromBarycenters.Rd
 feda30142b4d6a25b9be04db6396f529 *man/vcgCreateKDtree.Rd
-7b066c75967cb6461b853f0f51afa7d3 *man/vcgCreateKDtreeFromBarycenters.Rd
+cd52b94ba8201014f7490e5f16239a4f *man/vcgCreateKDtreeFromBarycenters.Rd
 78c5ea48317926274365ddb3de0a821b *man/vcgCurve.Rd
 5f956c8de19307c975a35c491d61ef3d *man/vcgGetEdge.Rd
-19c40eb088de977b3fd806f40d4fbefc *man/vcgImport.Rd
-db94d9d543525261dccc1823ef7c4ec9 *man/vcgIsolated.Rd
+03c3c9a06757c5f0801ed3229703c1f0 *man/vcgImport.Rd
+60600a88925fbce3409c7c20ce619b58 *man/vcgIsolated.Rd
 40d2e9aa729182fb97c4799d470a268e *man/vcgIsosurface.Rd
-4aadb7b0419940e01966ac1514a2a057 *man/vcgKDtree.Rd
-a30c0e9cbee74f8f8ac23d94c3cf1b10 *man/vcgKmeans.Rd
+015cf3ecca3efe30836e738df72a0937 *man/vcgKDtree.Rd
+bd06fde53a1fa1510707910af00f5245 *man/vcgKmeans.Rd
 08f75afc7abb21d48f2962e80582e866 *man/vcgMeshres.Rd
-87d793cb01cdbd5fd260e535c698cf70 *man/vcgMetro.Rd
+2fc3e94c29f4ad078755ea736fcc2c19 *man/vcgMetro.Rd
 58d277074e2dd64ba54f5d41485f8dd4 *man/vcgNonBorderEdge.Rd
 58246223e93b005ce11d196ffef67cc9 *man/vcgObjWrite.Rd
 0f2e00e7c05f3aba14b912f3806804c8 *man/vcgOffWrite.Rd
-dfaeb5ac80786e116d1d7512180b011f *man/vcgPlatonic.Rd
+036ab14b517ab48a2f4d2515c1f5b757 *man/vcgPlatonic.Rd
 dc7568b869c514976f5f2849b8b7e27a *man/vcgPlyRead.Rd
 2a6e5bb66773e26ba74c78e6848f438b *man/vcgPlyWrite.Rd
 001e6e890155bbf683c09a5c6a39805a *man/vcgQEdecim.Rd
 68eb0b2a21ae83a1a23ce16f3b7a9980 *man/vcgRaySearch.Rd
-cf5934c0b019f6d2a9b144000e760016 *man/vcgSample.Rd
-4521001c8a36ff1b0485b8f12da45ae3 *man/vcgSearchKDtree.Rd
+6496dd0078aa617b6187a622fd157d66 *man/vcgSample.Rd
+43ebf867e3b2b1c268488beae9371266 *man/vcgSearchKDtree.Rd
 ea21132cb470d288d3a79a743586423d *man/vcgSmooth.Rd
 3f8dd12bb1f042b8df08d3f2ae7726a6 *man/vcgStlWrite.Rd
 aad5c7947e6284d1ef5f1496e944c945 *man/vcgSubdivide.Rd
 d0848fb7902060cbacd3ba89434b3380 *man/vcgUniformRemesh.Rd
-d779c942de4f56477a77b3d63874d395 *man/vcgUpdateNormals.Rd
+4ed88b6a87d5cef8d58bb91476020e2b *man/vcgUpdateNormals.Rd
 264fadf5f8dca627423cdbc22c1613af *man/vcgVFadj.Rd
 17f37ce612c291a3a7f345b8431e1d9b *man/vcgWrlWrite.Rd
 dbbb3a2691468e69cd4161db4625dfe2 *src/Makevars
@@ -92,7 +92,7 @@ c6e096c9c58341dcb0f637645735f088 *src/ROneRing.cpp
 f3dbdc94e3e63e782e0c3de86c16674c *src/RQEdecim.cpp
 93c6a8a40a4a4756cfcd3b2073a42e46 *src/RVFadj.cpp
 9bd33db745aa1de90141eb474a90aaef *src/RallRead.cpp
-7d94cd4ea75ea490c09832da19035013 *src/Rarea.cpp
+699b3c1546cbf75da1a95795105e1cbb *src/Rarea.cpp
 70d57c828e4008f2711466e6f11d6f22 *src/Rballpivot.cpp
 771c7522c1f1d87a5a206cb0f1d63ee3 *src/Rborder.cpp
 e3481be60237c08ca62d422d203f0306 *src/Rclean.cpp
@@ -100,7 +100,7 @@ dd297f1e60c8cc626849764c6e9e6009 *src/Rclost.cpp
 1e774338d9fa864c0fc8ee135e65e785 *src/Rcurvature.cpp
 f9a4050a5dc8735958288bc614232045 *src/Rexport.cpp
 086d177f2161ef311d6bb5bf55ea54ae *src/RgetEdge.cpp
-53e57f8599642a9c4e048c6dc0c6eac0 *src/Rintersect.cpp
+d999f5f61159f0cbd103e712c3685310 *src/Rintersect.cpp
 43d4276d12f3bbc8b55c37b6602740cb *src/Risolated.cpp
 e7b59b1c932249562566c8b1f8539010 *src/Rkdtree.cpp
 3dfc0f9b03a3700adeabd233786e67be *src/RkdtreeXptr.cpp
@@ -110,7 +110,7 @@ e7b59b1c932249562566c8b1f8539010 *src/Rkdtree.cpp
 6b0785976c0305557d98cb4a98283a32 *src/Rmetro.cpp
 3f318067e2a218c0d132465a4e12a8ab *src/Rplatonic.cpp
 c71829ae5fc0241975f35f5e6d592743 *src/Rsample.cpp
-f02f040a6da35dc4a8fa6d7a09bd4fa1 *src/Rsmooth.cpp
+c385e984aa5126fba14cbf1413142212 *src/Rsmooth.cpp
 cfcb7266a12f2b194d53ccdf64b442c1 *src/Rsubdivision.cpp
 7b5ddc1bc5e9c27071c59972c92bee8d *src/Runiform_resample.cpp
 4ae6574dd31bb95eedbed47cd176ba5e *src/RupdateNormals.cpp
@@ -120,7 +120,7 @@ a54355551bedf708083c5fa9a647a806 *src/RvcgKD.h
 f5786c83daab8a1d60edb2ecce59689e *src/Volume.h
 57848ff712d9c0232afefc093eced1d6 *src/checkListNames.cpp
 0ced371835088c27e3fd2726d8dfe58d *src/checkListNames.h
-ceb57ddb5f737732bd2d8c64fbb2263a *src/init.c
+9ac0d9bb9566c4fbb89de223e78a66e7 *src/init.c
 49fbf37a39e2acc1c0fd1ad8c0dd147f *src/metroSampling.h
 764bbdf0d11dd20e685b5379fbed397f *src/pointcloud.h
 9a72487ed9546a626949e455e81c4e67 *src/typedef.h
@@ -464,7 +464,7 @@ a9e44332427f490e609da6f73099642e *src/vcglib/wrap/io_trimesh/export_gts.h
 1f7233313cb9ad13f89428f7206f3301 *src/vcglib/wrap/io_trimesh/export_off.h
 426ffeebb04536719c9271c5702e156c *src/vcglib/wrap/io_trimesh/export_ply.h
 bd9765bfaa851ac1f3928a99c1b56187 *src/vcglib/wrap/io_trimesh/export_smf.h
-a3917ce173a013b5f954ff330adab26a *src/vcglib/wrap/io_trimesh/export_stl.h
+17558be96d31389e729a8884bc365dd6 *src/vcglib/wrap/io_trimesh/export_stl.h
 7a007eba893152f7a68c96bd45b0b60b *src/vcglib/wrap/io_trimesh/export_u3d.h
 7686ea9d65cd9484e2c30bba76bc7cc7 *src/vcglib/wrap/io_trimesh/export_vmi.h
 e7b4207f778e378066f8c0a116757cfb *src/vcglib/wrap/io_trimesh/export_vrml.h
