@@ -4,8 +4,9 @@
 \alias{vcgClost}
 \title{Project coordinates onto a target triangular surface mesh.}
 \usage{
-vcgClost(x, mesh, sign = TRUE, barycentric = FALSE, smoothNormals = FALSE,
-  borderchk = FALSE, tol = 0, facenormals = FALSE, ...)
+vcgClost(x, mesh, sign = TRUE, barycentric = FALSE,
+  smoothNormals = FALSE, borderchk = FALSE, tol = 0,
+  facenormals = FALSE, ...)
 }
 \arguments{
 \item{x}{k x 3 matrix containing 3D-coordinates or object of class "mesh3d".}
