@@ -4,7 +4,8 @@
 \alias{vcgCreateKDtreeFromBarycenters}
 \title{create a KD-tree from Barycenters for multiple closest point searches on a mesh}
 \usage{
-vcgCreateKDtreeFromBarycenters(mesh, nofPointsPerCell = 16, maxDepth = 64)
+vcgCreateKDtreeFromBarycenters(mesh, nofPointsPerCell = 16,
+  maxDepth = 64)
 }
 \arguments{
 \item{mesh}{matrix or triangular mesh containing coordinates}
@@ -20,9 +21,11 @@ returns an object of class vcgKDtreeWithBarycenters containing external pointers
 create a KD-tree from Barycenters for multiple closest point searches on a mesh
 }
 \examples{
+\dontrun{
 data(humface);data(dummyhead)
 barytree <- vcgCreateKDtreeFromBarycenters(humface)
 closest <- vcgClostOnKDtreeFromBarycenters(barytree,dummyhead.mesh,k=50,threads=1)
+}
 }
 \seealso{
 \code{\link{vcgClostOnKDtreeFromBarycenters}, \link{vcgSearchKDtree},  \link{vcgCreateKDtree}}
