@@ -24,10 +24,12 @@ a list with
 search an existing KD-tree
 }
 \examples{
+\dontrun{
 data(humface);data(dummyhead)
 mytree <- vcgCreateKDtree(humface)
 ## get indices and distances for 10 closest points.
 closest <- vcgSearchKDtree(mytree,dummyhead.mesh,k=10,threads=1)
+}
 }
 \seealso{
 \code{\link{vcgCreateKDtree}}
